--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Verstecke Chronik-Aufklappmenü bei gedrückter Maustaste">
 <!ENTITY Ctr_bf_space		"Reduziere Zwischenraum (falls möglich)">
 <!ENTITY Ctr_noconicons		"Seitenkontextmenü: ersetze Symbole durch Namen (Zurück, Vor...)">
-<!ENTITY Ctr_altoptionsd	"Einstellungsseite (about:preferences): Standard-Darstellung">
-<!ENTITY Ctr_altoptionsp	"Einstellungsseite (about:preferences): alternative Darstellung">
-<!ENTITY Ctr_altoptionsw	"Einstellungsseite (about:preferences) in einem Fenster öffnen">
+<!ENTITY Ctr_prefpage		"Einstellungsseite">
+<!ENTITY Ctr_altoptionsd	"Standard-Darstellung">
+<!ENTITY Ctr_altoptionsp	"Alternative Darstellung">
+<!ENTITY Ctr_altoptionsw	"Einstellungsseite in einem Fenster öffnen">
+<!ENTITY Ctr_altoptionsww	"Breite">
+<!ENTITY Ctr_altoptionswh	"Höhe">
+<!ENTITY Ctr_altoptionsi	"Das simulierte Einstellungsfenster ist kein Dialogfenster mehr, sondern ein leistenloses normales Fenster. Die Funktion 'Aktuelle Seite verwenden' fügt nur Adressen hinzu, die im aktuellen Fenster geöffnet sind, was in diesem Fall nur 'about:preferences' ist. Die Leisten-Schalfläche 'Einstellungen' wird durch eine neue ersetzt, die es ermöglicht ein Einstellungsfenster zu öffnen.">
+<!ENTITY Ctr_options_rem	"Speichere die zuletzt besuchte Kategorie">
 <!ENTITY Ctr_svgfilters		"SVG Farben für Symbole von 'Standard-Schaltflächen'">
 <!ENTITY Ctr_wincontrols	"Verschiebbare Fenster-Schaltflächen im Vollbild-Modus">
 <!ENTITY Ctr_oldtoplevimg	"Bilder oberster Ebene (Top-Level-Domain): klassische Darstellung">
