--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Meni historije pśez tłocenje myškoweje tasty schowaś">
 <!ENTITY Ctr_bf_space		"Rum mjazy tłocaškami reducěrowaś (jolic móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstowego menija boka pśez pomjenjenja wuměniś (slědk, dalej, stoj, znowego, bok ako cytańske znamje składowaś)">
-<!ENTITY Ctr_altoptionsd	"Bok nastajenjow (about:preferences): default appearance">
-<!ENTITY Ctr_altoptionsp	"Bok nastajenjow (about:preferences): alternatiwny wenkowny naglěd">
-<!ENTITY Ctr_altoptionsw	"Bok nastajenjow (about:preferences) we woknje wócyniś">
+<!ENTITY Ctr_prefpage		"Bok nastajenjow">
+<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsp	"Alternatiwny wenkowny naglěd">
+<!ENTITY Ctr_altoptionsw	"Bok nastajenjow we woknje wócyniś">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
