--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Hiirega klõpsates peida nupu ajaloo hüpikmenüü">
 <!ENTITY Ctr_bf_space		"Vähenda nuppudevahelist tühimikku (kui võimalik)">
 <!ENTITY Ctr_noconicons		"Lehe kontekstimenüü: asenda ikoonid tekstiga (tagasi, edasi...)">
-<!ENTITY Ctr_altoptionsd	"Sätete leht (about:preferences): vaikimisi välimus">
-<!ENTITY Ctr_altoptionsp	"Sätete leht (about:preferences): alternatiivne välimus">
-<!ENTITY Ctr_altoptionsw	"Ava sätete leht (about:preferences) aknas">
+<!ENTITY Ctr_prefpage		"Sätete leht">
+<!ENTITY Ctr_altoptionsd	"Vaikimisi välimus">
+<!ENTITY Ctr_altoptionsp	"Alternatiivne välimus">
+<!ENTITY Ctr_altoptionsw	"Ava sätete leht aknas">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
 <!ENTITY Ctr_wincontrols	"Teisaldatavad akna juhtelemendid täisekraani režiimis">
 <!ENTITY Ctr_oldtoplevimg	"'Tippdomeeni' pildid: klassikaline välimus">
