--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Masquer le menu historique lors du clic droit">
 <!ENTITY Ctr_bf_space		"Réduire l'espace entre les boutons (si possible)">
 <!ENTITY Ctr_noconicons		"Remplacer les icônes du menu contextuel de la page par du texte (Page précédente, Page suivante, Arrêter/Actualiser, Marquer cette page)">
-<!ENTITY Ctr_altoptionsd	"Page d'options (about:preferences): default appearance">
-<!ENTITY Ctr_altoptionsp	"Page d'options (about:preferences) : appearance alternative ">
-<!ENTITY Ctr_altoptionsw	"Ouvrir la page d'options (about:preferences) dans une fenêtre">
+<!ENTITY Ctr_prefpage		"Page d'options">
+<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsp	"Appearance alternative ">
+<!ENTITY Ctr_altoptionsw	"Ouvrir la page d'options dans une fenêtre">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"Couleurs SVG pour les icônes par défaut de la barre d'outils">
 <!ENTITY Ctr_wincontrols	"Plein écran : boutons déplaçables">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
