--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Meni historije přez tłóčenje tasty myše schować">
 <!ENTITY Ctr_bf_space		"Rum mjez tłóčatkami redukować (jeli móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstoweho menija strony přez pomjenowanja wuměnić (wróćo, dale, stój, znowa, stronu jako zapołožku składować)">
-<!ENTITY Ctr_altoptionsd	"Strona nastajenjow (about:preferences): default appearance">
-<!ENTITY Ctr_altoptionsp	"Strona nastajenjow (about:preferences): alternatiwny zwonkowny napohlad">
-<!ENTITY Ctr_altoptionsw	"Strona nastajenjow (about:preferences) we woknje wočinić">
+<!ENTITY Ctr_prefpage		"Strona nastajenjow">
+<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsp	"Alternatiwny zwonkowny napohlad">
+<!ENTITY Ctr_altoptionsw	"Strona nastajenjow we woknje wočinić">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"SVG-barby za symbole standardnych tłóčatkow">
 <!ENTITY Ctr_wincontrols	"Přesuwajomne wodźenske elementy połneje wobrazowki">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
