--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Nascondi la cronologia tenendo premuto il pulsante Avanti/Indietro mobile">
 <!ENTITY Ctr_bf_space		"Riduci lo spazio tra i pulsanti (se possibile)">
 <!ENTITY Ctr_noconicons		"Sostituisce le icone del menu contestuale con etichette (indietro, avanti, stop, ricarica, segnalibro)">
-<!ENTITY Ctr_altoptionsd	"Options page (about:preferences): default appearance">
-<!ENTITY Ctr_altoptionsp	"Aspetto alternativo per la pagina Opzioni (about:preferences)">
-<!ENTITY Ctr_altoptionsw	"Aprire la pagina Opzioni (about:preferences) in una finestra">
+<!ENTITY Ctr_prefpage		"Options page">
+<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsp	"Aspetto alternativo">
+<!ENTITY Ctr_altoptionsw	"Aprire la pagina Opzioniin una finestra">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"Colori SVG per le icone dei pulsanti della barra strumenti">
 <!ENTITY Ctr_wincontrols	"Angoli finestra mobili in modalità schermo intero">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
