--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
 <!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (Wstecz, Do przodu, Zatrzymaj, Odśwież, Dodaj zakładkę)">
-<!ENTITY Ctr_altoptionsd	"Strona opcji (about:preferences): Domyślny wygląd">
-<!ENTITY Ctr_altoptionsp	"Strona opcji (about:preferences): Alternatywny wygląd">
-<!ENTITY Ctr_altoptionsw	"Otwieraj w oknie stronę ustawień (about:preferences)">
+<!ENTITY Ctr_prefpage		"Strona opcji">
+<!ENTITY Ctr_altoptionsd	"Domyślny wygląd">
+<!ENTITY Ctr_altoptionsp	"Alternatywny wygląd">
+<!ENTITY Ctr_altoptionsw	"Otwieraj w oknie stronę ustawień">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu">
 <!ENTITY Ctr_oldtoplevimg	"Obrazy 'domeny najwyższego poziomu': Klasyczny wygląd">
