--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Приховати меню історії при натисканні миші">
 <!ENTITY Ctr_bf_space		"Зменшити відстань між кнопками (якщо це можливо)">
 <!ENTITY Ctr_noconicons		"Замінити іконки контекстного меню сторінки написами (назад, вперед, стоп, перезавантажити, сторінка закладок)">
-<!ENTITY Ctr_altoptionsd	"Сторінка «Налаштування» (about:preferences): default appearance">
-<!ENTITY Ctr_altoptionsp	"Сторінка «Налаштування» (about:preferences): альтернативний вигляд">
-<!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань (about:preferences) у новому вікні">
+<!ENTITY Ctr_prefpage		"Сторінка Налаштування">
+<!ENTITY Ctr_altoptionsd	"default appearance">
+<!ENTITY Ctr_altoptionsp	"Альтернативний вигляд">
+<!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань у новому вікні">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"SVG кольори для типових іконок кнопок панелі інструментів">
 <!ENTITY Ctr_wincontrols	"Рухоме управління повноекранним режимом">
 <!ENTITY Ctr_oldtoplevimg	"Зображення «домену верхнього рівня»: класичний вигляд">
