--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"鼠标按下时隐藏历史菜单">
 <!ENTITY Ctr_bf_space		"减少按钮之间的空白 (如果可以)">
 <!ENTITY Ctr_noconicons		"页面右键菜单: 使用标签来替代图标 (后退, 前进...)">
-<!ENTITY Ctr_altoptionsd	"选项页面 (about:preferences): 默认外观">
-<!ENTITY Ctr_altoptionsp	"选项页面 (about:preferences): 备选的外观">
-<!ENTITY Ctr_altoptionsw	"在窗口中打开选项页面(about:preferences)">
+<!ENTITY Ctr_prefpage		"选项页面">
+<!ENTITY Ctr_altoptionsd	"默认外观">
+<!ENTITY Ctr_altoptionsp	"备选的外观">
+<!ENTITY Ctr_altoptionsw	"在窗口中打开选项页面">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
 <!ENTITY Ctr_oldtoplevimg	"“顶级域名”图片: 经典外观">
