--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Skjul knapperne historik popupmenu når der trykkes på musen">
 <!ENTITY Ctr_bf_space		"Reducér mellemrum mellem knapperne (hvis det er muligt)">
 <!ENTITY Ctr_noconicons		"Side-genvejsmenu: erstat ikoner med mærkater (tilbage, fremad...)">
-<!ENTITY Ctr_altoptionsd	"Options page (about:preferences): default appearance">
-<!ENTITY Ctr_altoptionsp	"Options page (about:preferences): alternative appearance">
-<!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
+<!ENTITY Ctr_prefpage		"Options page">
+<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsp	"Alternative appearance">
+<!ENTITY Ctr_altoptionsw	"Open options page in a window">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"SVG-farver til standard værktøjslinje knap ikoner">
 <!ENTITY Ctr_wincontrols	"Flytbar fuldskærmsvindue kontrolelementer">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
