--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"Ocultar menú de historial de estos botones al pulsarlos con el ratón">
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas (Anterior, Siguiente...)">
-<!ENTITY Ctr_altoptionsd	"Página de opciones (about:preferences): Apariencia predeterminada">
-<!ENTITY Ctr_altoptionsp	"Página de opciones (about:preferences): Apariencia alternativa">
-<!ENTITY Ctr_altoptionsw	"Abrir página de opciones (about:preferences) en una ventana">
+<!ENTITY Ctr_prefpage		"Página de opciones">
+<!ENTITY Ctr_altoptionsd	"Apariencia predeterminada">
+<!ENTITY Ctr_altoptionsp	"Apariencia alternativa">
+<!ENTITY Ctr_altoptionsw	"Abrir página de opciones en una ventana">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
 <!ENTITY Ctr_oldtoplevimg	"Imágenes de 'dominio de primer nivel': Apariencia clásica">
