--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -114,9 +114,14 @@
 <!ENTITY Ctr_hide_bf_popup	"當滑鼠長按時，不顯示分頁歷史瀏覽選單">
 <!ENTITY Ctr_bf_space		"減少按鈕間距 (如有可能)">
 <!ENTITY Ctr_noconicons		"右鍵選單的「回到上一頁、前進下一頁、停止載入、重新載入、加入書籤」由橫排圖示換回縱排文字風格">
-<!ENTITY Ctr_altoptionsd	"選項頁 (about:preferences): default appearance">
-<!ENTITY Ctr_altoptionsp	"選項頁 (about:preferences): 換個外觀">
-<!ENTITY Ctr_altoptionsw	"用傳統式的彈出新視窗來開啟選項頁 (about:preferences)">
+<!ENTITY Ctr_prefpage		"選項頁">
+<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsp	"換個外觀">
+<!ENTITY Ctr_altoptionsw	"用傳統式的彈出新視窗來開啟選項頁">
+<!ENTITY Ctr_altoptionsww	"Width">
+<!ENTITY Ctr_altoptionswh	"Height">
+<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
+<!ENTITY Ctr_options_rem	"Remember last selected category">
 <!ENTITY Ctr_svgfilters		"改變預設工具列按鈕圖示顏色">
 <!ENTITY Ctr_wincontrols	"可移動的全螢幕視窗控制項">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
