et - 1.4.4b1 + complete review

--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -81,8 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Nupp [&brandShortName;]i tiitliribal">
 <!ENTITY Ctr_appbutton2h	"Nupp [&brandShortName;]i tiitliribal (peidetud)">
 <!ENTITY Ctr_appbutton2io	"Nupp [&brandShortName;]i tiitliribal (ainult ikoon)">
-<!ENTITY Ctr_paneluibtweak	"Oranž paneelimenüü nupp kaartide ribal">
-<!ENTITY Ctr_paneluibtweak2	" ">
+<!ENTITY Ctr_paneluibtweak	"Kasuta peamise paneelimenüü nupu jaoks rakenduse menüünupu välimust...">
+<!ENTITY Ctr_paneluibtweak2	"...kui see asub kaartide ribal">
 <!ENTITY Ctr_appbuttonc_o	"Oranži värvi nupp (vaikimisi)">
 <!ENTITY Ctr_appbuttonc_a	"Sinist värvi nupp (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Musta värvi nupp (Nightly)">
@@ -118,10 +118,10 @@
 <!ENTITY Ctr_altoptionsd	"Vaikimisi välimus">
 <!ENTITY Ctr_altoptionsp	"Alternatiivne välimus">
 <!ENTITY Ctr_altoptionsw	"Ava sätete leht aknas">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"Laius">
+<!ENTITY Ctr_altoptionswh	"Kõrgus">
+<!ENTITY Ctr_altoptionsi	"Simuleeritud sätete aken ei ole enam dialoogiaken, vaid peidetud tööriistaribadega 'brauseri aken'. Säte 'Kasuta aktiivset veebilehte' lisab avalehtede hulka ainult aktiivses aknas avatud lehtede aadressid, mis on antud juhul ainult 'about:preferences'. Nupp 'Sätted' tööriistaribal asendatakse uuega, et saaks sätted avada aknas.">
+<!ENTITY Ctr_options_rem	"Jäta meelde viimati valitud kategooria">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
 <!ENTITY Ctr_wincontrols	"Teisaldatavad akna juhtelemendid täisekraani režiimis">
 <!ENTITY Ctr_oldtoplevimg	"'Tippdomeeni' pildid: klassikaline välimus">
@@ -151,25 +151,25 @@
 <!ENTITY Ctr_nav_txt_ico3	"Näita ainult teksti">
 <!ENTITY Ctr_nav_txt_exp	"Katsejärgus atribuudid:">
 <!ENTITY Ctr_iat_notf_vt	"Välista vertikaalsed tööriistaribad">
-<!ENTITY Ctr_cpanelmenus	"Paneelimenüüd: kompaktne vaade (järjehoidjad, ajalugu jms.)">
+<!ENTITY Ctr_cpanelmenus	"Paneelimenüüd (järjehoidjad, ajalugu jms.): kompaktne vaade">
 <!ENTITY Ctr_hidezoomres	"Suurendamise juhtnupud tööriistaribal: peida suurendamise lähtestamise nupp">
 <!ENTITY Ctr_alt_newtabp	"Uue kaardi leht (about:newtab): alternatiivne välimus">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing (katsejärgus)">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
-<!ENTITY Ctr_alt_addonsp	"Lisade 'rohkem teavet' leht: alternatiivne järjestus">
-<!ENTITY Ctr_alt_addonsm	"Lisade haldur: alternatiivne välimus">
-<!ENTITY Ctr_am_nowarning	"Lisade halduri laienduste loend: peida hoiatused">
-<!ENTITY Ctr_am_compact		"Lisade loend: kompaktne vaade">
+<!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
+<!ENTITY Ctr_alt_addonsm	"Alternatiivne välimus">
+<!ENTITY Ctr_am_nowarning	"Laienduste loend: peida hoiatused">
+<!ENTITY Ctr_am_compact		"Laienduste loend: kompaktne vaade">
 <!ENTITY Ctr_am_compact2	"Kompaktne vaade +">
-<!ENTITY Ctr_addonversion	"Lisade halduri laienduste loend: näita lisade versiooni">
-<!ENTITY Ctr_xpinstallui	"Lisade haldur: vana lisade paigaldamise aken (about:config eelistus)">
+<!ENTITY Ctr_addonversion	"Laienduste loend: näita lisade versiooni">
+<!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutpanelm	"Järjehoidjate menüü nupp: paneelimenüü välimus">
 <!ENTITY Ctr_bmbutnotext	"Järjehoidjate menüü nupp: peida järjehoidjate ribal sildid">
 <!ENTITY Ctr_skipprintpr	"Printimise nupp: jäta vahele printimise eelvaade">
 <!ENTITY Ctr_tbconmenu		"Tööriistariba kontekstimenüü: peida kirjed 'liiguta menüüsse', 'eemalda tööriistamenüült', 'laadi uuesti/lisa järjehoidjatesse kõik kaardid' ja 'võta kaardi sulgemine tagasi'">
 <!ENTITY Ctr_noresizerxp	"Peida suurusemuutja (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Ava lisa-aadressiriba (Cmd/Ctrl+">
-<!ENTITY Ctr_pmhidelabels	"Paneelimenüü hüpik: peida nupu sildid">
+<!ENTITY Ctr_pmhidelabels	"Paneelimenüü hüpik: peida nuppude tekstid">
 <!ENTITY Ctr_menupopupscr	"Menüühüpikud: näita kerimisnoolte asemel kerimisribasid">
 <!ENTITY Ctr_closegeneral	"Üldised sulgemise ikoonid">
 
@@ -246,7 +246,7 @@
 <!ENTITY Ctr_mbarforceright	"Viimane element">
 
 <!ENTITY Ctr_toolbars		"Tööriistaribad">
-<!ENTITY Ctr_dblclnewtab	"Topeltklõpsamine avab kaardi 'uus' (eelistus browser.newtab.url)">
+<!ENTITY Ctr_dblclnewtab	"Topeltklõpsamine avab kaardi 'uus'">
 <!ENTITY Ctr_hidetbwot		"Ainult ühe nähtava kaardi korral peida kaartide riba">
 <!ENTITY Ctr_hidetbwote		"Vähenda peitmise viivitust käivitumisel">
 <!ENTITY Ctr_hidetbwote_i	"Võib põhjustada kaartide riba tõrkeid">
@@ -258,23 +258,23 @@
 <!ENTITY Ctr_alttabstb2		"Maksimeeritud režiimis (kaardid peal)">
 
 <!ENTITY Ctr_altmenubar		"Lisa taustavärv (OS tiitliriba)">
-<!ENTITY Ctr_altmenubarpos	"Alternatiivne asukoht">
+<!ENTITY Ctr_altmenubarpos	"alternatiivne asukoht">
 <!ENTITY Ctr_altmenubarpos2	"&brandShortName;i tiitliriba all">
 <!ENTITY Ctr_menubarnofog	"Eemalda taustavärv/-udu (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Sinised Aero värvid tööriistaribadel (ja kaartidel)">
 <!ENTITY Ctr_transpttbw10	"Tiitli-/menüü-/kaartide riba: eemalda taustavärv">
 <!ENTITY Ctr_transptcw10	"Peida vaikimisi op-süsteemi min/max/sulge nupud">
-<!ENTITY Ctr_hidenavbar		"Aadressiriba: peida tööriistariba">
+<!ENTITY Ctr_hidenavbar		"Peida tööriistariba">
 <!ENTITY Ctr_navbarpad		"Lisatühimik vasakul ja paremal">
 <!ENTITY Ctr_navbarpad_l	"Vasakul:">
 <!ENTITY Ctr_navbarpad_r	"Paremal:">
-<!ENTITY Ctr_nobookbarbg	"Järjehoidjate riba: eemalda taustavärv">
-<!ENTITY Ctr_bookbarfs		"Järjehoidjate riba: täisekraani režiimis">
-<!ENTITY Ctr_nonavbarbg		"Aadressiriba: eemalda taustavärv">
+<!ENTITY Ctr_nobookbarbg	"Eemalda taustavärv">
+<!ENTITY Ctr_bookbarfs		"Täisekraani režiimis">
+<!ENTITY Ctr_nonavbarbg		"Eemalda taustavärv">
 <!ENTITY Ctr_nonavbarbg1	"Mõjutab selle laienduse lisa-tööriistaribasid ja teisi ülemisi tööriistaribasid.">
 <!ENTITY Ctr_nonavbarbg2	"Mõjutab kõiki laienduse 'Beyond Australis' Slim Chrome'i tööriistaribasid.">
-<!ENTITY Ctr_nonavborder	"Järjehoidjate riba: lisa ribale ülemine piirjoon">
+<!ENTITY Ctr_nonavborder	"Lisa ribale ülemine piirjoon">
 <!ENTITY Ctr_nonavtbborder	"Ülemised tööriistaribad: eemalda tööriistariba piirjooned">
 <!ENTITY Ctr_hidesbclose	"Külgribad: peida külgriba sulgemise nupp">
 <!ENTITY Ctr_notextshadow	"Tööriistaribad: peida tööriistariba teksti ja kaardi teksti vari">
