--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -118,10 +118,10 @@
 <!ENTITY Ctr_altoptionsd	"Default appearance">
 <!ENTITY Ctr_altoptionsp	"Nadomestni videz">
 <!ENTITY Ctr_altoptionsw	"Odpri stran z možnostmi v oknu">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"Širina">
+<!ENTITY Ctr_altoptionswh	"Višina">
+<!ENTITY Ctr_altoptionsi	"Simulirano okno možnosti ni več pogovorno okno, ampak 'okna brskalnika' s skritimi orodnimi vrsticami. Značilnost 'Uporabi trenutno stran' samo doda url-je strani, ki so odprte v trenutnem oknu, ki je v tem primeru samo 'about:preferences'. Gumb orodne vrstice 'možnosti' se nadomesti z novim, da se lahko možnosti odprejo v oknu.">
+<!ENTITY Ctr_options_rem	"Zapomni si nazadnje izbrano kategorijo">
 <!ENTITY Ctr_svgfilters		"Barve SVG za privzete ikone gumbov orodne vrstice">
 <!ENTITY Ctr_wincontrols	"Premakljive nadzorne tipke celozaslonskega okna">
 <!ENTITY Ctr_oldtoplevimg	"Slike 'vrhnje domene': klasični videz">
@@ -139,7 +139,7 @@
 <!ENTITY Ctr_navsmallicons	"Majhne ikone">
 <!ENTITY Ctr_navlargeicons	"Velike ikone">
 <!ENTITY Ctr_nbisizedelay0	"Zakasnitev izvajanja v ms">
-<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s)">
 <!ENTITY Ctr_findbar		"Položaj iskalne vrstice">
 <!ENTITY Ctr_findbar_def	"Spodaj (privzeto)">
 <!ENTITY Ctr_findbar_top	"Zgoraj">
@@ -215,11 +215,11 @@
 <!ENTITY Ctr_hideurlgo		"Skrij gumb 'Pojdi'">
 <!ENTITY Ctr_hideurlsrg		"Skrij ločila in presledke gumbov 'Ponovno naloži, Ustavi in Pojdi'">
 <!ENTITY Ctr_urlbardropm	"Premakni spustno puščico na konec naslovne vrstice">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_altreaderico	"Nadomestne ikone 'Bralnika'">
 <!ENTITY Ctr_hideprbutton	"Skrij ikono obvestil ob blokiranju pojavnega okna">
 <!ENTITY Ctr_urlbar_ib		"Gumb identitete strani (polje indentitete)">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ib_nohovcolor	"Ob prehodu ne prikaži sive barve">
+<!ENTITY Ctr_verifiedcolors	"Barve gumbov za preverjene strani, varne in nezanesljive povezave">
 <!ENTITY Ctr_faviconurl		"Zaznamka: ikona trenutne spletne strani">
 <!ENTITY Ctr_padlock		"Ikona ključavnice za varne povezave">
 <!ENTITY Ctr_padlock_hid	"skrita">
