--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -97,8 +97,8 @@
 <!ENTITY Ctr_appbuttonI1	"Taaskäivitamine soovitatav">
 <!ENTITY Ctr_appbuttonI1e	"Pole nähtav Windows OS-i tiitliribal, ainult &brandShortName;i tiitliribal!">
 <!ENTITY Ctr_appbuttonI2	"Nupuvärvid on nähtavad ainult tiitliribal ja kaartide ribal!">
-<!ENTITY Ctr_appbutmhi		"Kõrgem asukoht (kui on kaartide ribal)">
-<!ENTITY Ctr_appbautocol	"Määra vaikimisi / Aurora / Nightly värvid automaatselt">
+<!ENTITY Ctr_appbutmhi		"Kõrgem asukoht (kui asub kaartide ribal)">
+<!ENTITY Ctr_appbautocol	"Määra brauseri uuendustekanali värvid (vaikimisi/Aurora/Nightly) automaatselt">
 <!ENTITY Ctr_appbutbdl		"Peida piirjooned ja taustavärvid">
 <!ENTITY Ctr_dblclclosefx	"Topeltklõps sulgeb praeguse akna">
 <!ENTITY Ctr_appbclmmenus	"Klõpsatavad menüünupu-sisesed menüüd (Uus kaart, Prindi...)">
