--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -118,10 +118,10 @@
 <!ENTITY Ctr_altoptionsd	"默认外观">
 <!ENTITY Ctr_altoptionsp	"备选的外观">
 <!ENTITY Ctr_altoptionsw	"在窗口中打开选项页面">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"宽度">
+<!ENTITY Ctr_altoptionswh	"高度">
+<!ENTITY Ctr_altoptionsi	"模拟的选项窗口再也不是一个对话框，而是一个隐藏所有工具栏的“浏览器窗口”。“使用当前页面”功能仅添加在已在当前窗口打开的页面地址，在这种情况下只是“about:preferences”选项。 “选项”工具栏图标被替换为新的，以便于在窗口中打开选项。">
+<!ENTITY Ctr_options_rem	"记住最后选中的分类">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
 <!ENTITY Ctr_oldtoplevimg	"“顶级域名”图片: 经典外观">
